# scale23x-demo

./: .env.example  .gitignore  README.md  compose.yml
infra/azure/: .terraform.lock.hcl  argo-rollouts.tf  argo-workfows.tf  argocd-values.tmpl  argocd.tf  cert-manager.tf  external-secrets.tf  github.tf  istio.tf  kaito.tf  locals.tf  main.tf  outputs.tf  terraform.tf  variables.tf
infra/docker/: compose.yaml  loki-config.yaml  otel-config.yaml  prometheus-config.yaml  redis.conf  tempo-config.yaml
infra/k8s/: .terraform.lock.hcl  argocd-gateway.tmpl  argocd-httproute.tmpl  argocd-tls.tmpl  argocd.tf  cert-manager-clusterissuer.tmpl  cert-manager.tf  external-secrets.tf  locals.tf  main.tf  outputs.tf  terraform.tf
manifests/apps/gateway/: kaito-gateway.yaml  kaito-tls.yaml  kustomization.yaml
manifests/apps/inference/: gemma-3-27b-instruct.yaml  kustomization.yaml  phi-4-mini-instruct.yaml
manifests/apps/o11y/: grafana.yaml  kustomization.yaml  loki.yaml  otel-collector.yaml  prometheus.yaml  redis.yaml  tempo.yaml
manifests/apps/ragengine/: kustomization.yaml  ragengine.yaml
manifests/apps/schedule/: cron-workflow.yaml  kustomconfig.yaml  kustomization.yaml  role-binding.yaml  (+2 more)
manifests/argocd/: app-of-apps.yaml
src/agent/: .env.example  .gitignore  AGENTS.md  Dockerfile  kaito_client.py  main.py  pyproject.toml  test_kaito_client.py
src/sched/: .dockerignore  Dockerfile  format_schedule.py  main.py  parse_schedule.py  pyproject.toml
src/web/: .env.example  AGENTS.md  Dockerfile  THEMING.md  package.json
tests/: gateway.http  ragengine.http
(+31 files in other folders)
